--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar-guest.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar-guest.html
@@ -13,7 +13,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto main-nav">
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/quienes-somos}">¿Quiénes somos?</a>
+                            <a class="nav-link" href="/quienes-somos">¿Quiénes somos?</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-primary" th:href="@{/nuevo-usuario}">Registrarse</a>
