--- a/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
@@ -36,10 +36,11 @@
     <div class="container">
         <div class="row justify-content-center bg-login">
             <div class="col-lg-12 align-item-center bg-shadow opacity-25 card">
-                <h1 class="bg-gray p-4 text-center">Crear un nuevo viaje</h1>
+                <h1 class="bg-gray p-4 text-center" th:text="${edito? 'Editar Viaje' : 'Crear viaje'}"></h1>
                 <div class="border mb-30 ms-0">
-                    <form class="p-3" action="#" th:action="@{/creacion}" th:object="${viaje}" method="POST">
+                    <form class="p-3" action="#" th:action="@{${edito ? '/editar' : '/creacion'}}" th:object="${viaje}" method="POST">
                         <div class="form-group">
+                            <input type="hidden" name="id" th:value="${viaje.id}">
                             <label for="origen" class="mb-3"><strong>Origen:</strong></label>
                             <select name="origen.id" th:field="${viaje.origen.id}" id="origen" class="form-control mb-3" required>
                                 <option value="">-- Selecciona una ciudad de Origen --</option>
@@ -92,7 +93,7 @@
                                 <p th:if="${error != null}" class="alert alert-danger m-0" th:text="${error}"></p>
                             </div>
                             <div class="justify-content-center text-center">
-                                <button class="p-3 btn btn-primary mt-2" type="submit">Crear Viaje</button>
+                                <button class="p-3 btn btn-primary mt-2" type="submit" th:text="${edito? 'Editar' : 'Crear'}"></button>
                             </div>
                         </div>
                     </form>
