--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -31,6 +31,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
     <link th:href="@{/css/viaje.css}" rel="stylesheet">
 </head>
@@ -272,29 +273,32 @@
                                 </div>
                             </div>
                         </div>
+                        <div th:each="comentario : ${comentarios}">
+                            <div class="d-flex align-items-start post-user-comment-box">
+                                <img class="me-2 avatar-sm rounded-circle" th:src="${comentario.imagenDePerfil}" alt="Generic placeholder image">
+                                <div class="w-100">
+                                    <h5 class th:text="${comentario.nombre}"><small class="text-muted"> 1 hour ago</small></h5>
+                                    <div class>
+                                        Cras sit amet nibh libero, in
+                                        gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Duis
+                                        sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
+                                        porta. Mauris massa.
+                                        <br>
+                                        <a href="javascript: void(0);" class="text-muted font-13 d-inline-block mt-2"><i class="mdi mdi-reply"></i> Reply</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     <div class="text-center">
                         <a href="javascript:void(0);" class="text-danger"><i class="mdi mdi-spin mdi-loading me-1"></i> Load more </a>
                     </div>
                         <div class="container mt-5">
-                            <h3>Dejanos tu comentario</h3>
                             <form id="commentForm">
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="score">Puntuación:</label>
-                                        <select class="form-control" id="score" required>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="comment">Comentario:</label>
-                                        <textarea class="form-control" id="comment" rows="3" required></textarea>
-                                    </div>
+                                <div class="form-group col-md-6">
+                                    <textarea class="form-control" id="comment" rows="3" placeholder="Dejanos tu comentario..." required></textarea>
                                 </div>
-                                <button type="button" class="btn btn-primary" onclick="submitForm()">Enviar</button>
+                                <button type="button" class="btn btn-primary" onclick="submitForm()"><i class="bi bi-send"></i></button>
                             </form>
                         </div>
                 </div>
