--- a/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
@@ -56,9 +56,13 @@
             <div class="col-md-12">
                 <div class="content-block">
                     <div th:once>
-                        <h1 th:if="${viajes != null and not #lists.isEmpty(viajes)}">
+                        <h1  th:if="${viajes != null and not #lists.isEmpty(viajes)}">
                             Viajes con destino a <span th:text="${viajes[0].destino.provincia.nombre}"></span>
                         </h1>
+                        <h1 th:unless="${viajes != null and not #lists.isEmpty(viajes)}">
+                            Sin Resultados
+                        </h1>
+
                         <!--<h1>Viajes con destino a <span th:text="${viajes[0].destino.provincia.nombre}"></span></h1>-->
                     </div>
                 </div>
@@ -71,7 +75,7 @@
     <div class="container">
         <div class="row topSpace">
             <div class="col-xl-12">
-                <div class="card">
+                <div class="card " style="max-height: 100%;margin-bottom: 1rem;margin-top: 0.5rem;">
                     <div class="card-body">
                         <div class="border border-light p-2 mb-3">
                             <!--<h3 class="header-title mb-3">Tus próximos viajes...</h3>-->
@@ -81,7 +85,7 @@
                                         <div class="flex-row">
                                             <img th:src="@{'/usuario/imagen/' + ${viaje.usuario.getId()}}" alt="avatar" class="rounded-circle img-avatar-size topSpace" style="max-width: 65% !important">
                                             <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}" class="card-title"></h4>
-                                            <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="btn btn-primary bottomSpace">Ver perfil</a>
+                                            <a th:href="@{/usuario(idUsuario= ${viaje.usuario.id})}" class="btn btn-primary bottomSpace">Ver perfil</a>
                                             <a href="#" class="btn btn-secondary bottomSpace">Conectar</a>
                                         </div>
                                     </div>
@@ -136,28 +140,29 @@
                                 </div>
                             </div>
                         </div>
+                        <div th:unless="${viajes != null and not #lists.isEmpty(viajes)}" class="mt-20 mb-3">
+                            <div class="container mt-5">
+                                <div class="row">
+                                    <div class="col-md-12 text-center">
+                                        <i class="fa-solid fa-exclamation-triangle mt-3" style="font-size: 8em;"></i>
+                                        <h1 class="display-4 alert-light mt-20 mb-20">No se encontraron elementos</h1>
+                                        <p class="lead mt-20 mb-3">Lo sentimos, no hay viajes que coincidan con su búsqueda.</p>
+                                        <a href="/spring" class="mt-4 p-3 btn btn-primary">Volver al Inicio<i> </i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<div th:unless="${viajes != null and not #lists.isEmpty(viajes)}">
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <i class="fa-solid fa-exclamation-triangle mt-3" style="font-size: 8em;"></i>
-                <h1 class="display-4 alert-light mt-20 mb-20">No se encontraron elementos</h1>
-                <p class="lead mt-20 mb-3">Lo sentimos, no hay viajes que coincidan con su búsqueda.</p>
-                <a href="/spring" class="mt-4 p-3 btn btn-primary">Volver al Inicio<i> </i></a>
-            </div>
-        </div>
-    </div>
-</div>
-<br>
-<br>
-<section>
+
+
+<!--<section>
     <div class="card mb-3" th:each="viaje : ${viajes}">
         <img class="card-img-top" th:src="@{'/destino/imagen/' + ${viaje.destino.getId()}}" alt="Imagen de Provincia">
         <div class="card-body">
@@ -174,7 +179,7 @@
         </div>
         <img class="card-img-bottom" src="..." alt="Card image cap">
     </div>
-</section>
+</section>-->
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
