--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -229,7 +229,7 @@
                                                         <div class="modal-content">
                                                             <span class="close" onclick="closeModal()">&times;</span>
                                                             <p>Nuevo Gasto</p>
-                                                            <form class="p-3" action="#" th:action="@{/perfil/agregar}" th:object="${gasto}" method="POST">
+                                                            <form class="p-3" action="#" th:action="@{/agregar}" th:object="${gasto}" method="POST">
                                                                 <div class="form-group">
                                                                     <input type="hidden" id="idViaje" name="idViaje" th:value="${viaje.id}">
                                                                     <label for="descripcion" class="mb-3"><strong>Detalle del Gasto:</strong></label>
