muestra error al ingresar credenciales invalidas

--- a/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
@@ -50,7 +50,8 @@
                                 <label for="keep-me-logged-in" class="pt-3 pb-2">Recordarme</label>
                             </div>
                             <button type="submit" class="btn btn-lg btn-primary font-weight-bold mt-3">Ingresar</button>
-
+                            <p style="margin-top:1em" th:if="${error != null}" class="alert alert-danger" th:text="${error}">
+                            </p>
                             <a class="mt-3 d-block text-primary" href="#!">Olvidaste tu contraseña?</a>
                             <a class="mt-3 d-inline-block text-primary" href="nuevo-usuario.html">Registrarse</a>
                         </fieldset>
