--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -191,7 +191,7 @@
                                     </ul>
                                     <div class="card-body">
                                         <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
-                                        <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
+                                        <a th:href="@{/usuario(idUsuario= ${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
                                     </div>
                                 </div>
                             </div>
