--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
@@ -39,6 +39,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
     <link th:href="@{/css/viaje.css}" rel="stylesheet">
+    <link th:href="@{/css/modal.css}" rel="stylesheet">
 </head>
 <body class="body-wrapper bg-darkness">
 <header class="fixed-top">
@@ -54,8 +55,10 @@
 
 <body>
 <div class="container spaceToHeaderFixed">
+
     <div class="card mb-3">
-        <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viajes.destino.getId()}}" height="380px" alt="Imagen descriptiva del destino del viaje">
+
+        <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viaje.destino.id}}" height="380px" alt="Imagen descriptiva del destino del viaje">
         <h1 class="card-title text-center"
             th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></h1>
         <!--<h5 class="card-text">Descripción</h5>-->
@@ -111,32 +114,42 @@
             <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}"
                class="btn btn-primary bottomSpace rightSpace">Ver perfil</a>
             <a href="#" class="btn btn-secondary bottomSpace rightSpace">Conectar</a>
-            <a th:href="@{/unir-a-viaje(viaje = ${viaje.id})}" class="btn  bottomSpace rightSpace"
-               th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}"></a>
-            <button th:attr="onclick='openModalViaje(\'' + ${viaje.id} + '\')'" type="button" class="btn btn-primary">Mostrar Gastos</button>
-        </div>
-        <div th:fragment="modal-gastos" class="modal">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal()">&times;</span>
-                <h2 th:text="${viaje.origen.nombre + ' '+ viaje.destino.nombre+' - Gastos'}"></h2>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Descripción</th>
-                        <th>Monto</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="gasto : ${gastos}">
-                        <td th:text="${gasto.descripcion}"></td>
-                        <td th:text="${gasto.monto}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+            <a th:href="@{/unir-a-viaje(viaje = ${viaje.id})}" class="btn  bottomSpace rightSpace"></a>
+<!--               th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}"></a>-->
+
+                <button type="button" class="btn btn-primary" th:onclick="'mostrarGastos(\'' + ${viaje.id} + '\')'">
+                    Ver Gastos
+                </button>
         </div>
 
-      <div id="mapa" style="height:400px;"
+        <!-- Modal -->
+        <div class="gastos-section">
+            <h2>Sección de Gastos</h2>
+            <table class="table listaGastos">
+                <thead>
+                <tr>
+                    <th>Detalle</th>
+                    <th>Monto</th>
+                </tr>
+                </thead>
+                <tbody id="tablaGastos">
+
+                </tbody>
+            </table>
+            <h5>Gasto total: <span id="montoTotal"></span></h5>
+            <p>*Recuerde que el TOTAL puede varias segun los gastos que agregue el conductor ya que este puede seguir agregando gasto hasta el final del viaje.</p>
+
+
+            <button type="button" class="btn btn-success" onclick="calcularMontoPorPersona()">Calcular Monto por Persona</button>
+
+            <!-- Mostrar el resultado del cálculo del monto por persona -->
+            <p>Monto por Persona: <span id="montoPorPersona"></span></p>
+
+        </div>
+
+
+        </div>
+        <div id="mapa" style="height:400px;"
         th:data-origen="${coordenadaOrigen}"
         th:data-destino="${coordenadaDestino}"></div>
   </div>
@@ -239,6 +252,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
 </script>
+
+<script th:src="@{/js/modal.js}"></script>
 </body>
 <!--
 </html>-->
