se implementa funcionalidad ver mis viajes.

--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar-user.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar-user.html
@@ -19,6 +19,9 @@
                             <a class="nav-link card-link" th:href="@{/mi-perfil}">Mi Perfil</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link card-link" th:href="@{/mis-viajes}">Mis Viajes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link btn btn-info mr-2" th:href="@{/crear-viaje}">Crear Viaje</a>
                         </li>
                         <li class="nav-item">
