--- a/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
@@ -24,12 +24,14 @@
     <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
     <script th:src="@{/plugins/google-map/map.js}" defer></script>
     <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
-
+    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet">
     <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
     <link th:href="@{/css/style.css}" rel="stylesheet">
     <script th:src="@{/js/script.js}"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
+          integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
     <link th:href="@{/css/viaje.css}" rel="stylesheet">
@@ -52,15 +54,21 @@
             <div class="card">
                 <div class="card-body">
                     <div class="border border-light p-2 mb-3">
-                        <h3 class="header-title mb-3" th:text="${usuario.nombre} + ' estos son tus proximos viajes:'"></h3>
+                        <h3 class="header-title mb-3"
+                            th:text="${usuario.nombre} + ' estos son tus proximos viajes:'"></h3>
                         <div th:each="viaje : ${viajes}">
                             <div class="card card-margin flex-row">
                                 <div class="flex-row userInfo text-center">
                                     <div class="flex-row">
-                                        <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" alt="avatar" class="rounded-circle img-avatar-size topSpace" style="max-width: 65% !important">
-                                        <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}" class="card-title"></h4>
-                                        <a th:href="@{/usuario(idUsuario= ${viaje.usuario.id})}" class="btn btn-primary bottomSpace">Ver perfil</a>
-                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}" class="btn btn-primary bottomSpace">Modificar</a>
+                                        <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" alt="avatar"
+                                             class="rounded-circle img-avatar-size topSpace"
+                                             style="max-width: 65% !important">
+                                        <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"
+                                            class="card-title"></h4>
+                                        <a th:href="@{/usuario(idUsuario= ${viaje.usuario.id})}"
+                                           class="btn btn-primary bottomSpace">Ver perfil</a>
+                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}"
+                                           class="btn btn-primary bottomSpace">Modificar</a>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 d-block">
@@ -70,29 +78,47 @@
                                                 <div class="widget-49-meeting-time">
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Origen: </span>
-                                                        <span class="widget-49-pro-title" th:text="${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></span>
+                                                        <span class="widget-49-pro-title"
+                                                              th:text="${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></span>
                                                     </div>
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Destino: </span>
-                                                        <span class="widget-49-pro-title" th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></span>
+                                                        <span class="widget-49-pro-title"
+                                                              th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></span>
                                                     </div>
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Fecha de salida: </span>
-                                                        <span class="widget-49-pro-title" th:text="${viaje.fecha}"></span>
+                                                        <span class="widget-49-pro-title"
+                                                              th:text="${viaje.fecha}"></span>
                                                     </div>
                                                     <div class="widget-49-date-warning">
-                                                        <span class="widget-49-pro-title">Lugares disponibles: </span>
-                                                        <span class="widget-49-pro-title" th:text="${viaje.cantidad}"></span>
-                                                    </div>
-                                                    <div class="widget-49-date-warning">
-                                                        <span class="widget-49-pro-title">Tiempo de viaje: </span>
-                                                        <span class="widget-49-meeting-time">6 horas</span>
-                                                    </div>
-                                                    <div class="widget-49-date-warning">
-                                                        <span class="widget-49-pro-title">No se aceptan niños</span>
-                                                    </div>
-                                                    <div class="widget-49-date-warning">
-                                                        <span class="widget-49-meeting-time">No se aceptan mascotas</span>
+                                                        <span class="widget-49-pro-title dateInfo">Condiciones:</span>
+                                                        <li class="list-group-item" style="font-size: 1.5em !important;">
+                                                        <span th:if="${viaje.noFumar}">
+                                                            <!-- Mostrar el icono de NO permitido fumar si noFumar es true -->
+                                                            <i class="nf nf-md-smoking"></i>
+                                                        </span>
+                                                        <span th:unless="${viaje.noFumar}">
+                                                            <!-- Mostrar el icono de permitido fumar si noFumar es false -->
+                                                            <i class="nf nf-md-smoking_off"></i>
+                                                        </span>
+                                                        <span th:if="${viaje.noNinios}">
+                                                            <!-- Mostrar el icono de NO permitido niños si noNinios es true -->
+                                                            <i class="nf nf-md-baby_carriage"></i>
+                                                        </span>
+                                                        <span th:unless="${viaje.noNinios}">
+                                                            <!-- Mostrar el icono de permitido niños si noNinios es false -->
+                                                            <i class="nf nf-md-baby_carriage_off"></i>
+                                                        </span>
+                                                        <span th:unless="${viaje.noMascotas}">
+                                                            <!-- Mostrar el icono de permitido mascotas si noMascotas es false -->
+                                                            <i class="nf nf-md-paw_off"></i>
+                                                        </span>
+                                                        <span th:if="${viaje.noMascotas}">
+                                                            <!-- Mostrar el icono de mascotas tachado si noMascotas es true -->
+                                                            <i class="nf nf-md-paw"></i>
+                                                        </span>
+                                                        </li>
                                                     </div>
                                                 </div>
                                             </div>
@@ -101,9 +127,19 @@
                                             <div class="widget-49-title-wrapper">
                                                 <div class="widget-49-meeting-time">
                                                     <div class="widget-49-date-warning">
+                                                        <span class="widget-49-pro-title dateInfo">Lugares disponibles: </span>
+                                                        <span class="widget-49-pro-title"
+                                                              th:text="${viaje.cantidad - viaje.getListaPasajeros().size()}"></span>
+                                                    </div>
+                                                    <div class="widget-49-date-warning">
+                                                        <span class="widget-49-pro-title dateInfo">Tiempo de viaje: </span>
+                                                        <span class="widget-49-meeting-time">6 horas</span>
+                                                    </div>
+                                                    <div class="widget-49-date-warning">
                                                         <div class="flex-row">
-                                                            <span class="widget-49-pro-title">Descripción del viaje: </span>
-                                                            <span class="widget-49-pro-title" th:text="${viaje.descripcion}"></span>
+                                                            <span class="widget-49-pro-title dateInfo">Descripción del viaje: </span>
+                                                            <span class="widget-49-pro-title"
+                                                                  th:text="${viaje.descripcion}"></span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -121,7 +157,8 @@
 </div>
 </body>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript"></script>
 <script src="plugins/jquery/jquery.min.js"></script>
