--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
@@ -13,24 +13,21 @@
     <link th:href="@{/plugins/slick/slick-theme.css}" rel="stylesheet">
     <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
 
-  <!-- Use Thymeleaf expressions for JavaScript URLs -->
-  <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
-  <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
-  <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
-  <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
-  <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
-  <script th:src="@{/plugins/raty/jquery.raty-fa.js}"></script>
-  <script th:src="@{/plugins/slick/slick.min.js}"></script>
-  <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
-  <script th:src="@{/plugins/google-map/map.js}" defer></script>
-  <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
-
-
-
+    <!-- Use Thymeleaf expressions for JavaScript URLs -->
+    <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
+    <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
+    <script th:src="@{/plugins/raty/jquery.raty-fa.js}"></script>
+    <script th:src="@{/plugins/slick/slick.min.js}"></script>
+    <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
+    <script th:src="@{/plugins/google-map/map.js}" defer></script>
+    <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
     <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet">
-  <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
-  <!--<link th:href="@{/css/style.css}" rel="stylesheet">-->
-  <script th:src="@{/js/script.js}"></script>
+    <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
+    <!--<link th:href="@{/css/style.css}" rel="stylesheet">-->
+    <script th:src="@{/js/script.js}"></script>
 
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
@@ -55,7 +52,8 @@
 <body>
 <div class="container spaceToHeaderFixed">
     <div class="card mb-3">
-        <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viajes.destino.getId()}}" height="380px" alt="Imagen descriptiva del destino del viaje">
+        <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viajes.destino.getId()}}" height="380px"
+             alt="Imagen descriptiva del destino del viaje">
         <h1 class="card-title text-center"
             th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></h1>
         <!--<h5 class="card-text">Descripción</h5>-->
@@ -115,10 +113,10 @@
                th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}"></a>
         </div>
 
-      <div id="mapa" style="height:400px;"
-        th:data-origen="${coordenadaOrigen}"
-        th:data-destino="${coordenadaDestino}"></div>
-  </div>
+        <div id="mapa" style="height:400px;"
+             th:data-origen="${coordenadaOrigen}"
+             th:data-destino="${coordenadaDestino}"></div>
+    </div>
 </div>
 
 <!--
@@ -212,8 +210,8 @@
 </div>-->
 
 
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeHh7_S2wkpYRu1DNMwzAZr5bcSd-cpY0&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeHh7_S2wkpYRu1DNMwzAZr5bcSd-cpY0&callback=initMap" async
+        defer></script>
 <script th:src="@{/js/maps.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
