--- a/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
@@ -49,7 +49,7 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row">
         <div class="col-xl-12">
-            <div class="card">
+            <div th:if="${viajes != null && viajes.size() > 0}" class="card">
                 <div class="card-body">
                     <div class="border border-light p-2 mb-3">
                         <h3 class="header-title mb-3" th:text="${usuario.nombre} + ' estos son tus proximos viajes:'"></h3>
@@ -114,6 +114,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div th:unless="${viajes != null && viajes.size() > 0}">
+                <!-- Fragmento de barra de navegación para invitados -->
+                <div style="display: flex; justify-content: center">
+                    <h1>Todavia no te uniste a ningun viaje!</h1>
                 </div>
             </div>
         </div>
