--- a/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
@@ -50,9 +50,12 @@
                                 <label for="keep-me-logged-in" class="pt-3 pb-2">Recordarme</label>
                             </div>
                             <button type="submit" class="btn btn-lg btn-primary font-weight-bold mt-3">Ingresar</button>
-                            <p style="margin-top:1em" th:if="${error != null}" class="alert alert-danger" th:text="${error}">
-                            </p>
-                            <a class="mt-3 d-block text-primary" href="#!">Olvidaste tu contraseña?</a>
+                            <p style="margin-top:1em" th:if="${error != null}" class="alert alert-danger" th:text="${error}"></p>
+
+                            <p style="margin-top:1em" th:if="${envioMail != null}" class="alert alert-success" th:text="${envioMail}"></p>
+
+                            <p style="margin-top:1em" th:if="${exito != null}" class="alert alert-success" th:text="${exito}"></p>
+                            <a class="mt-3 d-block text-primary" th:href="@{/restablecer-password}">Olvidaste tu contraseña?</a>
                             <a class="mt-3 d-inline-block text-primary" href="nuevo-usuario.html">Registrarse</a>
                         </fieldset>
                     </form>
