--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -31,6 +31,16 @@ p {
 .gray-color{
   background-color: #a5b1b5 !important;
 }
+.custom-image-size {
+  min-width: 100%!important;
+  min-height: max-content!important;
+  object-fit: cover;
+  width: 340px;
+  height: 200px;
+}
+
+
+
 /*.avatar-image {
   width: 50px;
   height: 50px;
