modifico vista mis viajes

--- a/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
@@ -128,8 +128,7 @@
                                                 <div class="widget-49-meeting-time">
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Lugares disponibles: </span>
-                                                        <span class="widget-49-pro-title"
-                                                              th:text="${viaje.cantidad - viaje.getListaPasajeros().size()}"></span>
+                                                        <span class="widget-49-pro-title" th:text="${viaje.cantidad}"></span>
                                                     </div>
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Tiempo de viaje: </span>
